--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -168,7 +168,7 @@ jobs:
         with:
           repository: KusionStack/charts
           valueFile: 'charts/karpor/Chart.yaml'
-          propertyPath: '{"version":"${{ steps.get_chart_version.outputs.new_chart_version }}", "appVersion":"${{ steps.get_version.outputs.VERSION }}"}'
+          changes: '{"version":"${{ steps.get_chart_version.outputs.new_chart_version }}", "appVersion":"${{ steps.get_version.outputs.VERSION }}"}'
           value: ${{ steps.get_version.outputs.VERSION }}
           branch: bump-karpor-to-${{ steps.get_version.outputs.VERSION }}
           targetBranch: test
